@@ -49,7 +49,6 @@ setup(name='plone.theme',
           'zope.interface',
           'zope.publisher',
           'zope.traversing',
-          'Products.CMFDefault',
           'Products.CMFCore',
           'Zope2',
       ],
