@@ -4,6 +4,8 @@ Changelog
 2.1.1 - unreleased
 ------------------
 
+- Remove hard dependency on CMFDefault.
+  [davisagli]
 
 2.1 - 2011-05-12
 ----------------
